src/tools/defaultValueParser/parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    start: peg$parsestart,
  };
  let peg$startRuleFunction = peg$parsestart;

  const peg$c0 = "array";
  const peg$c1 = "boolean";
  const peg$c2 = "bool";
  const peg$c3 = ",";
  const peg$c4 = "::";
  const peg$c5 = "\"";
  const peg$c6 = "\\";
  const peg$c7 = "false";
  const peg$c8 = "now";
  const peg$c9 = "null";
  const peg$c10 = "smallint";
  const peg$c11 = "real";
  const peg$c12 = "numeric";
  const peg$c13 = "integer";
  const peg$c14 = "int8";
  const peg$c15 = "int4";
  const peg$c16 = "int2";
  const peg$c17 = "double precision";
  const peg$c18 = "bigint";
  const peg$c19 = "(";
  const peg$c20 = ")";
  const peg$c21 = "'";
  const peg$c22 = " ";
  const peg$c23 = "[";
  const peg$c24 = "]";
  const peg$c25 = "varchar";
  const peg$c26 = "timestamptz";
  const peg$c27 = "timestamp";
  const peg$c28 = "without time zone";
  const peg$c29 = "with time zone";
  const peg$c30 = "timetz";
  const peg$c31 = "time";
  const peg$c32 = "text";
  const peg$c33 = "gen_random_uuid";
  const peg$c34 = "date";
  const peg$c35 = "character varying";
  const peg$c36 = "character";
  const peg$c37 = "bpchar";
  const peg$c38 = "true";
  const peg$c39 = "[]";
  const peg$c40 = "nextval";
  const peg$c41 = "regclass";

  const peg$r0 = /^[0-9.]/;
  const peg$r1 = /^['\\]/;
  const peg$r2 = /^[a-z\-_]/i;
  const peg$r3 = /^[^'\\]/;

  const peg$e0 = peg$literalExpectation("array", true);
  const peg$e1 = peg$literalExpectation("boolean", true);
  const peg$e2 = peg$literalExpectation("bool", true);
  const peg$e3 = peg$literalExpectation(",", false);
  const peg$e4 = peg$classExpectation([["0", "9"], "."], false, false, false);
  const peg$e5 = peg$literalExpectation("::", false);
  const peg$e6 = peg$literalExpectation("\"", false);
  const peg$e7 = peg$literalExpectation("\\", false);
  const peg$e8 = peg$literalExpectation("false", true);
  const peg$e9 = peg$literalExpectation("now", true);
  const peg$e10 = peg$literalExpectation("null", true);
  const peg$e11 = peg$literalExpectation("smallint", true);
  const peg$e12 = peg$literalExpectation("real", true);
  const peg$e13 = peg$literalExpectation("numeric", true);
  const peg$e14 = peg$literalExpectation("integer", true);
  const peg$e15 = peg$literalExpectation("int8", true);
  const peg$e16 = peg$literalExpectation("int4", true);
  const peg$e17 = peg$literalExpectation("int2", true);
  const peg$e18 = peg$literalExpectation("double precision", true);
  const peg$e19 = peg$literalExpectation("bigint", true);
  const peg$e20 = peg$literalExpectation("(", false);
  const peg$e21 = peg$literalExpectation(")", false);
  const peg$e22 = peg$literalExpectation("'", false);
  const peg$e23 = peg$literalExpectation(" ", false);
  const peg$e24 = peg$literalExpectation("[", false);
  const peg$e25 = peg$literalExpectation("]", false);
  const peg$e26 = peg$literalExpectation("varchar", true);
  const peg$e27 = peg$literalExpectation("timestamptz", true);
  const peg$e28 = peg$literalExpectation("timestamp", true);
  const peg$e29 = peg$literalExpectation("without time zone", true);
  const peg$e30 = peg$literalExpectation("with time zone", true);
  const peg$e31 = peg$literalExpectation("timetz", true);
  const peg$e32 = peg$literalExpectation("time", true);
  const peg$e33 = peg$literalExpectation("text", true);
  const peg$e34 = peg$literalExpectation("gen_random_uuid", true);
  const peg$e35 = peg$literalExpectation("date", true);
  const peg$e36 = peg$literalExpectation("character varying", true);
  const peg$e37 = peg$literalExpectation("character", true);
  const peg$e38 = peg$literalExpectation("bpchar", true);
  const peg$e39 = peg$literalExpectation("true", true);
  const peg$e40 = peg$classExpectation(["'", "\\"], false, false, false);
  const peg$e41 = peg$literalExpectation("[]", false);
  const peg$e42 = peg$literalExpectation("nextval", true);
  const peg$e43 = peg$classExpectation([["a", "z"], "-", "_"], false, true, false);
  const peg$e44 = peg$literalExpectation("regclass", true);
  const peg$e45 = peg$classExpectation(["'", "\\"], true, false, false);

  function peg$f0() {
    return false;
  }
  function peg$f1() {
    return true;
  }
  function peg$f2(array) {
    return array;
  }
  function peg$f3() {
    return [];
  }
  function peg$f4(member) {
    return [member];
  }
  function peg$f5(member, separatedMembers) {
    return [member].concat(...separatedMembers);
  }
  function peg$f6(content) {
    return content;
  }
  function peg$f7(entry) {
    return entry;
  }
  function peg$f8() {
    return { type: "AUTO_INCREMENT" }
  }
  function peg$f9() {
    return { type: "UUID()" }
  }
  function peg$f10(boolean) {
    return boolean;
  }
  function peg$f11(content) {
    return content;
  }
  function peg$f12(sequence) {
    return sequence;
  }
  function peg$f13() {
    return { type: "NOW()" };
  }
  function peg$f14(content) {
    return content;
  }
  function peg$f15() {
    return null;
  }
  function peg$f16(number) {
    return number;
  }
  function peg$f17(content) {
    return content;
  }
  function peg$f18(text) {
    return text;
  }
  function peg$f19(chars) {
    return unquote(text());
  }
  function peg$f20(content) {
    return content;
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    let s0;

    s0 = peg$parseEntry();

    return s0;
  }

  function peg$parsei_array() {
    let s0;

    s0 = input.substr(peg$currPos, 5);
    if (s0.toLowerCase() === peg$c0) {
      peg$currPos += (5);
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }

    return s0;
  }

  function peg$parsei_booleanCast() {
    let s0;

    s0 = input.substr(peg$currPos, 7);
    if (s0.toLowerCase() === peg$c1) {
      peg$currPos += (7);
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s0 === peg$FAILED) {
      s0 = input.substr(peg$currPos, 4);
      if (s0.toLowerCase() === peg$c2) {
        peg$currPos += (4);
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
    }

    return s0;
  }

  function peg$parsei_comma() {
    let s0;

    if (input.charCodeAt(peg$currPos) === 44) {
      s0 = peg$c3;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }

    return s0;
  }

  function peg$parsei_digit() {
    let s0;

    s0 = input.charAt(peg$currPos);
    if (peg$r0.test(s0)) {
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }

    return s0;
  }

  function peg$parsei_doubleColon() {
    let s0;

    if (input.substr(peg$currPos, 2) === peg$c4) {
      s0 = peg$c4;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }

    return s0;
  }

  function peg$parsei_doubleQuote() {
    let s0;

    if (input.charCodeAt(peg$currPos) === 34) {
      s0 = peg$c5;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }

    return s0;
  }

  function peg$parsei_escape() {
    let s0;

    if (input.charCodeAt(peg$currPos) === 92) {
      s0 = peg$c6;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e7); }
    }

    return s0;
  }

  function peg$parsei_false() {
    let s0, s1;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 5);
    if (s1.toLowerCase() === peg$c7) {
      peg$currPos += (5);
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e8); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f0();
    }
    s0 = s1;

    return s0;
  }

  function peg$parsei_now() {
    let s0;

    s0 = input.substr(peg$currPos, 3);
    if (s0.toLowerCase() === peg$c8) {
      peg$currPos += (3);
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }

    return s0;
  }

  function peg$parsei_null() {
    let s0;

    s0 = input.substr(peg$currPos, 4);
    if (s0.toLowerCase() === peg$c9) {
      peg$currPos += (4);
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e10); }
    }

    return s0;
  }

  function peg$parsei_numberCast() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = input.substr(peg$currPos, 8);
    if (s0.toLowerCase() === peg$c10) {
      peg$currPos += (8);
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e11); }
    }
    if (s0 === peg$FAILED) {
      s0 = input.substr(peg$currPos, 4);
      if (s0.toLowerCase() === peg$c11) {
        peg$currPos += (4);
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e12); }
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = input.substr(peg$currPos, 7);
        if (s1.toLowerCase() === peg$c12) {
          peg$currPos += (7);
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e13); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$currPos;
          s3 = peg$parsei_parenL();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parsei_digit();
            if (s5 !== peg$FAILED) {
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$parsei_digit();
              }
            } else {
              s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$currPos;
              s6 = peg$parsei_comma();
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parsei_digit();
                if (s8 !== peg$FAILED) {
                  while (s8 !== peg$FAILED) {
                    s7.push(s8);
                    s8 = peg$parsei_digit();
                  }
                } else {
                  s7 = peg$FAILED;
                }
                if (s7 !== peg$FAILED) {
                  s6 = [s6, s7];
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              s6 = peg$parsei_parenR();
              if (s6 !== peg$FAILED) {
                s3 = [s3, s4, s5, s6];
                s2 = s3;
              } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
          if (s2 === peg$FAILED) {
            s2 = null;
          }
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = input.substr(peg$currPos, 7);
          if (s0.toLowerCase() === peg$c13) {
            peg$currPos += (7);
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e14); }
          }
          if (s0 === peg$FAILED) {
            s0 = input.substr(peg$currPos, 4);
            if (s0.toLowerCase() === peg$c14) {
              peg$currPos += (4);
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e15); }
            }
            if (s0 === peg$FAILED) {
              s0 = input.substr(peg$currPos, 4);
              if (s0.toLowerCase() === peg$c15) {
                peg$currPos += (4);
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e16); }
              }
              if (s0 === peg$FAILED) {
                s0 = input.substr(peg$currPos, 4);
                if (s0.toLowerCase() === peg$c16) {
                  peg$currPos += (4);
                } else {
                  s0 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e17); }
                }
                if (s0 === peg$FAILED) {
                  s0 = input.substr(peg$currPos, 16);
                  if (s0.toLowerCase() === peg$c17) {
                    peg$currPos += (16);
                  } else {
                    s0 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e18); }
                  }
                  if (s0 === peg$FAILED) {
                    s0 = input.substr(peg$currPos, 6);
                    if (s0.toLowerCase() === peg$c18) {
                      peg$currPos += (6);
                    } else {
                      s0 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e19); }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsei_parenL() {
    let s0;

    if (input.charCodeAt(peg$currPos) === 40) {
      s0 = peg$c19;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e20); }
    }

    return s0;
  }

  function peg$parsei_parenR() {
    let s0;

    if (input.charCodeAt(peg$currPos) === 41) {
      s0 = peg$c20;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e21); }
    }

    return s0;
  }

  function peg$parsei_quote() {
    let s0;

    if (input.charCodeAt(peg$currPos) === 39) {
      s0 = peg$c21;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e22); }
    }

    return s0;
  }

  function peg$parsei_space() {
    let s0;

    if (input.charCodeAt(peg$currPos) === 32) {
      s0 = peg$c22;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e23); }
    }

    return s0;
  }

  function peg$parsei_sqBracketL() {
    let s0;

    if (input.charCodeAt(peg$currPos) === 91) {
      s0 = peg$c23;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e24); }
    }

    return s0;
  }

  function peg$parsei_sqBracketR() {
    let s0;

    if (input.charCodeAt(peg$currPos) === 93) {
      s0 = peg$c24;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e25); }
    }

    return s0;
  }

  function peg$parsei_textCast() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 7);
    if (s1.toLowerCase() === peg$c25) {
      peg$currPos += (7);
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e26); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = peg$parsei_parenL();
      if (s3 !== peg$FAILED) {
        s4 = [];
        s5 = peg$parsei_digit();
        if (s5 !== peg$FAILED) {
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parsei_digit();
          }
        } else {
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parsei_parenR();
          if (s5 !== peg$FAILED) {
            s3 = [s3, s4, s5];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      s1 = [s1, s2];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = input.substr(peg$currPos, 11);
      if (s1.toLowerCase() === peg$c26) {
        peg$currPos += (11);
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e27); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parsei_parenL();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsei_digit();
          if (s5 !== peg$FAILED) {
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parsei_digit();
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsei_parenR();
            if (s5 !== peg$FAILED) {
              s3 = [s3, s4, s5];
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = input.substr(peg$currPos, 9);
        if (s1.toLowerCase() === peg$c27) {
          peg$currPos += (9);
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e28); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$currPos;
          s3 = peg$parsei_parenL();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parsei_digit();
            if (s5 !== peg$FAILED) {
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$parsei_digit();
              }
            } else {
              s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parsei_parenR();
              if (s5 !== peg$FAILED) {
                s3 = [s3, s4, s5];
                s2 = s3;
              } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
          if (s2 === peg$FAILED) {
            s2 = null;
          }
          s3 = peg$parsei_space();
          if (s3 !== peg$FAILED) {
            s4 = input.substr(peg$currPos, 17);
            if (s4.toLowerCase() === peg$c28) {
              peg$currPos += (17);
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e29); }
            }
            if (s4 !== peg$FAILED) {
              s1 = [s1, s2, s3, s4];
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = input.substr(peg$currPos, 9);
          if (s1.toLowerCase() === peg$c27) {
            peg$currPos += (9);
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e28); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$currPos;
            s3 = peg$parsei_parenL();
            if (s3 !== peg$FAILED) {
              s4 = [];
              s5 = peg$parsei_digit();
              if (s5 !== peg$FAILED) {
                while (s5 !== peg$FAILED) {
                  s4.push(s5);
                  s5 = peg$parsei_digit();
                }
              } else {
                s4 = peg$FAILED;
              }
              if (s4 !== peg$FAILED) {
                s5 = peg$parsei_parenR();
                if (s5 !== peg$FAILED) {
                  s3 = [s3, s4, s5];
                  s2 = s3;
                } else {
                  peg$currPos = s2;
                  s2 = peg$FAILED;
                }
              } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
            if (s2 === peg$FAILED) {
              s2 = null;
            }
            s3 = peg$parsei_space();
            if (s3 !== peg$FAILED) {
              s4 = input.substr(peg$currPos, 14);
              if (s4.toLowerCase() === peg$c29) {
                peg$currPos += (14);
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e30); }
              }
              if (s4 !== peg$FAILED) {
